# Prog2-NHF

./: .clang-format  Bejegyzes.cpp  Bejegyzes.h  CMakeLists.txt  Ceg.h  README.md  Szemely.h  imput.txt  memtrace.cpp  memtrace.h  telefonkonyv-main.cpp  telefonkonyv.cpp  telefonkonyv.h  ugyfel.cpp  ugyfel.h
lib/: gtest_lite.h  memtrace.cpp  memtrace.h
structures/: Bejegyzes.cpp  Bejegyzes.h  Ceg.h  Szemely.h  telefonkonyv.cpp  telefonkonyv.h
